# Entity-Manager

./: CMakeLists.txt  compile_project  main.cpp
app/: Person.h  PersonRepository.cpp  PersonRepository.h
app/repository/: PersonRepository.cpp  PersonRepository.h
test/: EnittyManagerTest.cpp  Sample.cpp  TestCases.cpp  main.cpp
test/model/: Person.cpp  Person.h
test/repository/: PersonRepository.cpp  PersonRepository.h
toolkit/: Configuration.cpp  Configuration.h  Database.cpp  Database.h  MySqlDatabase.cpp  MySqlDatabase.h  Repository.cpp  Repository.h  SQL.cpp  SqlColumn.cpp  SqlParameter.cpp
toolkit/mysql/: MySQLDatabase.cpp  MySQLDatabase.h
